@@ -12,6 +12,9 @@ Below is a complete listing of changes for each revision of HighLine.
 * Removed a circular require that kept Ruby 1.9.2 from loading HighLine.
 * Fixed a bug that caused infinite looping when wrapping text without spaces.
 * Fixed it so that :auto paging accounts for the two lines it adds.
+* On JRuby, improved error message about ffi-ncurses.  Before 1.5.3, 
+  HighLine was silently swallowing error messages when ffi-ncurses gem
+  was installed without ncurses present on the system.
 
 == 1.5.2
 
